--- a/client/src/shared/loading/loading.scss
+++ b/client/src/shared/loading/loading.scss
@@ -1,64 +1,115 @@
 .loading {
   background: rgb(0 0 0 / 17%);
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   position: absolute;
   z-index: 1;
 
   .loading__container {
-    background: rgb(172 202 164 / 83%);
+    background: #22c55e96;
     height: 240px;
     width: 270px;
     margin: auto;
     position: absolute;
     z-index: 2;
-    top: 28%;
-    right: 38%;
+    top: calc(50vh - 120px);
+    right: calc(50vw - 135px);
     border-radius: 6px;
+    box-shadow: 0 0 6px 2px #30d86e61;
   }
 
-
-  .lds-ring {
-    display: inline-block;
-    position: absolute;
-    top: 31%;
-    right: 32%;
-    width: 80px;
-    height: 80px;
+  /*-----------------------------------------------------------*/
+  /* From uiverse.io by @mobinkakei */
+  .wrapper {
+    margin: 68px auto;
+    width: 200px;
+    height: 60px;
+    position: relative;
+    z-index: 1;
   }
 
-  .lds-ring div {
-    box-sizing: border-box;
-    display: block;
+  .circle {
+    width: 20px;
+    height: 20px;
     position: absolute;
-    width: 64px;
-    height: 64px;
-    margin: 8px;
-    border: 8px solid #2c8c14;
     border-radius: 50%;
-    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: #2c8c14 transparent transparent transparent;
+    background-color: #15803d;
+    left: 15%;
+    transform-origin: 50%;
+    animation: circle7124 .5s alternate infinite ease;
   }
 
-  .lds-ring div:nth-child(1) {
-    animation-delay: -0.45s;
-  }
-
-  .lds-ring div:nth-child(2) {
-    animation-delay: -0.3s;
-  }
-
-  .lds-ring div:nth-child(3) {
-    animation-delay: -0.15s;
-  }
-
-  @keyframes lds-ring {
+  @keyframes circle7124 {
     0% {
-      transform: rotate(0deg);
+      top: 60px;
+      height: 5px;
+      border-radius: 50px 50px 25px 25px;
+      transform: scaleX(1.7);
     }
+
+    40% {
+      height: 20px;
+      border-radius: 50%;
+      transform: scaleX(1);
+    }
+
     100% {
-      transform: rotate(360deg);
+      top: 0%;
     }
   }
+
+  .circle:nth-child(2) {
+    left: 45%;
+    animation-delay: .2s;
+  }
+
+  .circle:nth-child(3) {
+    left: auto;
+    right: 15%;
+    animation-delay: .3s;
+  }
+
+  .shadow {
+    width: 20px;
+    height: 4px;
+    border-radius: 50%;
+    background-color: rgba(0,0,0,0.9);
+    position: absolute;
+    top: 62px;
+    transform-origin: 50%;
+    z-index: -1;
+    left: 15%;
+    filter: blur(1px);
+    animation: shadow046 .5s alternate infinite ease;
+  }
+
+  @keyframes shadow046 {
+    0% {
+      transform: scaleX(1.5);
+    }
+
+    40% {
+      transform: scaleX(1);
+      opacity: .7;
+    }
+
+    100% {
+      transform: scaleX(.2);
+      opacity: .4;
+    }
+  }
+
+  .shadow:nth-child(4) {
+    left: 45%;
+    animation-delay: .2s
+  }
+
+  .shadow:nth-child(5) {
+    left: auto;
+    right: 15%;
+    animation-delay: .3s;
+  }
+
+  /*------------------------------------------------------------*/
 
 }
