--- a/client/src/shared/alert/alert.scss
+++ b/client/src/shared/alert/alert.scss
@@ -1,4 +1,5 @@
 .alert {
+  padding-top: 4px;
   z-index: 3;
   cursor: auto;
   position: fixed;
@@ -7,17 +8,18 @@
   box-shadow: 0 0 3px #78ff78;
   color: #0cb60c;
   text-align: center;
-  border-radius: 3px;
+  border-radius: 3px 3px 0 0;
   min-width: 280px;
   right: calc(50vw - 150px);
 
   span {
-    font-size: 18px;
+    font-size: 16px;
+    margin-top: 3px;
     line-height: 2.2;
   }
 
   hr {
-    margin: 7px 0 3px;
+    margin: 7px 0 0;
     height: 3px;
     background: #0fcb39;
     border: none;
