--- a/client/src/modules/Member/components/home/home.scss
+++ b/client/src/modules/Member/components/home/home.scss
@@ -87,4 +87,31 @@
     transform: perspective(500px) translateZ(30px);
   }
 
+  .first-section {
+    text-align: center;
+    h2 {
+      font-size: 35px;
+      line-height: 3;
+      color: #07a807;
+    }
+    p {
+      font-size: 18px;
+    }
+  }
+
+  .board {
+    margin: auto;
+    width: 98vw;
+    height: 300px;
+    background: linear-gradient(45deg, #f53803, #f5d020);
+    border-radius: 5px;
+    color: #252525;
+    box-shadow: inset 0 0 9px 1px #0000008a;
+    p {
+      text-align: center;
+      font-size: 25px;
+      line-height: 11;
+    }
+  }
+
 }
