--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -49,6 +49,12 @@ input:valid {
   overflow: hidden
 }
 
+@media only screen and (max-width: 450px) {
+  * {
+    font-size: 12px;
+  }
+}
+
 @media only screen and (min-width: 1280px) {
   h2 {
     font-size: 30px;
