--- a/client/src/modules/Member/components/footer/footer.scss
+++ b/client/src/modules/Member/components/footer/footer.scss
@@ -1,5 +1,96 @@
 .footer {
-  margin-top: 150px;
+  display: grid;
+  align-items: center;
+  margin-top: 30px;
   border-top: 1px solid;
-  background: #ccc;
+  background: #5a5a5a;
+  padding: 25px 0;
+
+  .connection i {
+    margin: 0 10px;
+    font-size: 18px;
+    color: #aaa;
+  }
+
+  .connection i:hover {
+    color: #ddd;
+  }
+
+  .connection__title {
+    font-size: 25px;
+    margin: 25px;
+    color: #f7f7f7;
+  }
+
+  .question {
+    background: #fdfffd57;
+    display: inline-block;
+    border-radius: 2px;
+    padding: 10px 16px;
+    margin: 12px 18px;
+    border: 1px solid #777;
+    color: #d5d5d5;
+  }
+
+  .question__body {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 1fr 1fr 3fr;
+    row-gap: 9px;
+    column-gap: 15px;
+
+    input {
+      border: none;
+      outline: none;
+      background: rgba(255, 255, 255, 0);
+      border-bottom: 1px solid #ddd;
+    }
+
+    textarea {
+      outline: none;
+      font-size: 12px;
+      line-height: 1.4;
+      background: #ffffff87;
+      resize: none;
+    }
+
+    textarea::-webkit-scrollbar{
+      width: 6px;
+    }
+  }
+
+  .question__send {
+    text-align: left;
+
+    button {
+      text-align: center;
+      font-size: 13px;
+      padding: 3px 12px;
+      margin-top: 9px;
+      background: #1560d0;
+      border: none;
+      border-radius: 2px;
+      cursor: pointer;
+      color: #eaeaea;
+      display: inline-block;
+      width: 60px;
+    }
+
+    button:hover {
+      background: #1560d0cc;
+    }
+  }
+
+  .about-us__title {
+    font-size: 22px;
+    color: #f7f7f7;
+    margin: 8px 25px;
+  }
+
+  .about-us_describe {
+    color: #ddd;
+    margin: 0 25px 0 40px;
+  }
+
+
 }
