--- a/client/src/modules/Member/components/home/home.scss
+++ b/client/src/modules/Member/components/home/home.scss
@@ -5,6 +5,8 @@
 
 
   .similar-plant {
+    position: relative;
+    margin: 0 0 30px 0;
     grid-row: 2;
     display: flex;
     flex-wrap: wrap;
@@ -13,21 +15,34 @@
   }
 
   .similar-plant__title {
+    margin-right: 20px;
     flex: 100%;
     @include text(20px, 200, 1, map_get($color, black-oltra-light))
   }
 
+  .similar-plant__body {
+    //width: 99vw;
+    overflow-x: scroll;
+    display: flex;
+    //height: ;
+  }
+
+  .similar-plant__body::-webkit-scrollbar {
+    height: 0;
+  }
+
   .similar-plant__item {
     position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    text-align: center;
+    display: inline-block;
     border: 1px solid #8e8e8e8e;
     border-radius: 5px;
-    padding: 1px 4px 15px;
-    width: 15%;
+    padding: 12px 4px 15px;
+    min-width: 15vw;
+    margin: 10px 10px;
     box-shadow: 0 0 7px 0 #dfdfdf;
     cursor: pointer;
+    transition: transform .3s linear;
   }
 
   .similar-plant__item:hover {
@@ -65,7 +80,8 @@
   .similar-plant__image {
     height: 12vw;
     object-fit: contain;
-    margin-bottom: 5px;
+    display: block;
+    margin: 0 auto 5px;
   }
 
   .similar-plant__score i {
@@ -78,6 +94,9 @@
   }
 
   .similar-plant__name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     margin-top: 15px;
     @include text(13px, 300);
   }
@@ -85,6 +104,42 @@
   .similar-plant__item:hover {
     transition: transform .3s linear;
     transform: perspective(500px) translateZ(30px);
+  }
+
+  .popular__go-left,
+  .popular__go-right {
+    position: absolute;
+    padding: 4px 17px;
+    top: 70px;
+    border-radius: 2px;
+    cursor: pointer;
+    opacity: 0;
+    transition: opacity 0.2s linear;
+    z-index: 1;
+    height: 74.7%;
+    color: #d1d1d1;
+    font-size: 26px;
+    display: flex;
+    align-items: center;
+  }
+  .popular__go-left {
+    left: 0;
+    background: linear-gradient(to right, #222, rgb(4 4 4 / 41%));
+  }
+  .popular__go-right {
+    right: 0;
+    background: linear-gradient(to left, #222, rgb(4 4 4 / 41%));
+  }
+
+  .similar-plant__body:hover .popular__go-left,
+  .similar-plant__body:hover .popular__go-right {
+    opacity: 0.7;
+    transition: opacity 0.2s linear;
+  }
+
+  .similar-plant__body:hover .popular__go-left:hover,
+  .similar-plant__body:hover .popular__go-right:hover {
+    opacity: 1;
   }
 
   .first-section {
@@ -100,18 +155,346 @@
   }
 
   .board {
-    margin: auto;
+    margin: 15px auto;
+    position: relative;
+    text-align: center;
     width: 98vw;
-    height: 300px;
-    background: linear-gradient(45deg, #f53803, #f5d020);
+    height: 33vw;
+    background: linear-gradient(to bottom, #22f224,#30be11, #0b7705);
+    //background: linear-gradient(to bottom, #ff781e, #83be11, #0b7705);
     border-radius: 5px;
     color: #252525;
     box-shadow: inset 0 0 9px 1px #0000008a;
-    p {
-      text-align: center;
-      font-size: 25px;
-      line-height: 11;
+
+    * {
+      position: absolute;
     }
+
+    h2 {
+      right: 16vw;
+      padding-top: 60px;
+      font-size: 40px;
+      color: #ff7c00;
+      text-shadow: 0 1px 2px black;
+    }
+  }
+
+  .board__describe1 {
+    top: 9vw;
+    right: 11vw;
+    font-size: 22px;
+    color: #db6b00c7;
+  }
+
+  .board__describe2 {
+    top: 18vw;
+    right: 11vw;
+    width: 39vw;
+    font-size: 20px;
+    color: #8f4600bf;
+  }
+
+  .board__background {
+    height: 33vw;
+    opacity: 0.05;
+    right: 31vw;
+  }
+
+  .board__img1 {
+    width: 8vw;
+    height: 12vw;
+    object-fit: cover;
+    top: 18vw;
+    left: 15vw;
+    border-radius: 3px;
+    opacity: 0.7;
+    z-index: 1;
+    transform: rotate(8deg);
+  }
+
+  .board__img2 {
+    width: 9vw;
+    height: 8vw;
+    object-fit: cover;
+    top: 3vw;
+    left: 13vw;
+    border-radius: 3px;
+    opacity: 0.7;
+    z-index: 1;
+    transform: rotate(27deg);
+  }
+
+  .board__img3 {
+    width: 14vw;
+    height: 26vw;
+    object-fit: cover;
+    top: 4vw;
+    left: 20vw;
+    border-radius: 3px;
+    opacity: 0.85;
+  }
+
+  .board__img4 {
+    width: 9vw;
+    height: 8vw;
+    object-fit: cover;
+    top: 11vw;
+    left: 13vw;
+    border-radius: 3px;
+    opacity: 0.7;
+    transform: rotate(-28deg);
+  }
+
+  .group {
+    margin-bottom: 35px;
+  }
+
+  .group__title {
+    margin-right: 30px;
+    @include text(20px, 200, 1, map_get($color, black-oltra-light));
+  }
+
+  .group__body {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-evenly
+  }
+
+  .group__item {
+    border: 1px solid #8e8e8e8e;
+    border-radius: 5px;
+    text-align: center;
+    cursor: pointer;
+    transition: transform .3s linear;
+  }
+
+  .group__item:hover {
+    transition: transform .3s linear;
+    transform: perspective(500px) translateZ(30px);
+  }
+
+  .group__name {
+    font-size: 17px;
+    margin: 0 0 10px;
+  }
+
+  .group__image {
+    height: 18vw;
+    width: 13vw;
+    object-fit: cover;
+    margin: 10px 8px 2px;
+    border-radius: 3px;
+    opacity: 0.8;
+  }
+
+  .amazing {
+    margin-bottom: 35px;
+  }
+
+  .amazing__title {
+    margin-right: 39px;
+    @include text(20px, 200, 1, map_get($color, black-oltra-light));
+  }
+
+  .amazing__body {
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .amazing__body::-webkit-scrollbar {
+    height: 0;
+  }
+
+  .amazing__items {
+    text-align: center;
+    border: 1px solid #888;
+    border-radius: 3px;
+    padding: 11px 10px;
+    cursor: pointer;
+    box-shadow: 0 0 3px #9c9c9c;
+    background: #f2f2f2;
+    transition: transform 0.2s linear;
+  }
+
+  .amazing__items:hover {
+    transition: transform .3s linear;
+    transform: perspective(500px) translateZ(30px);
+  }
+
+  .amazing__describe {
+    max-width: 150px;
+    display: inline-block;
+    font-weight: bold;
+  }
+
+  .amazing__img {
+    display: block;
+    width: 190px;
+    height: 230px;
+    object-fit: cover;
+    margin: 0 4px 7px;
+    border-radius: 2px;
+  }
+
+  .article {
+    margin-bottom: 20px;
+  }
+
+  .article__title {
+    margin-right: 22px;
+    @include text(20px, 200, 1, map_get($color, black-oltra-light));
+  }
+
+  .article__body {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .article__body::-webkit-scrollbar {
+    height: 0;
+  }
+
+  .article__item {
+    width: 30vw;
+    border: 1px solid #888;
+    border-radius: 3px;
+    display: inline-block;
+    margin: 4px auto 16px;
+    text-align: center;
+    box-shadow: 0 0 5px 0 #cacaca;
+  }
+
+  .article__item-title {
+    font-size: 16px;
+  }
+
+  .article__date {
+    font-size: 10px;
+    text-align: left;
+    line-height: 0;
+    margin: 12px 6px;
+  }
+
+  .article__item-body {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    grid-template-rows: 5fr auto;
+    justify-items: end;
+  }
+
+  .article__describe {
+    font-size: 14px;
+    color: #333;
+    max-width: 88%;
+    margin: 8px auto;
+
+    height: 133px;
+    overflow: hidden;
+    display: -webkit-box;
+    line-clamp: 6;
+    -webkit-line-clamp: 6; /* number of lines to show */
+    -webkit-box-orient: vertical;
+  }
+
+  .article__img {
+    width: 9vw;
+    margin: 10px 10px;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    grid-column: 2;
+    max-height: 14vw;
+    object-fit: cover;
+  }
+
+  .article__item-more {
+    font-size: 13px;
+    padding: 3px 12px;
+    margin: 2px 15px 12px;
+    background: #0d6efdc7;
+    border: 1px solid #818181;
+    border-radius: 2px;
+    cursor: pointer;
+    color: #ffffff;
+    display: inline-block;
+    width: 60px;
+  }
+
+  .article__item-more:hover {
+    background: #0d6efd7d;
+  }
+
+  .article__more {
+    text-align: left;
+
+    button {
+      font-size: 14px;
+      padding: 7px 60px;
+      background: #0d6efdc7;
+      border: 1px solid #818181;
+      border-radius: 3px;
+      cursor: pointer;
+      color: #ffffff;
+      margin: 0 20px;
+    }
+
+    button:hover {
+      background: #0d6efd7d;
+    }
+  }
+
+  .question {
+    position: relative;
+  }
+
+  .question__title {
+    margin: 10px 12px;
+    @include text(20px, 200, 1, map_get($color, black-oltra-light));
+  }
+
+  .question__body {
+    width: 99vw;
+    overflow-x: scroll;
+    display: flex;
+  }
+
+  .question__body::-webkit-scrollbar {
+    height: 0;
+  }
+
+  .question__item {
+    background: #dfd;
+    border: 1px solid #333;
+    border-radius: 2px;
+    margin: 5px 12px;
+    padding: 2px 12px;
+    cursor: pointer;
+    display: inline;
+    text-wrap: nowrap;
+  }
+
+  .question__go-left,
+  .question__go-right {
+    position: absolute;
+    padding: 4px 10px;
+    border: 1px solid #333;
+    top: 34px;
+    border-radius: 100%;
+    background: #12e713;
+    cursor: pointer;
+    opacity: 0;
+    transition: opacity 0.2s linear;
+  }
+  .question__go-left {
+    left: 14px;
+  }
+  .question__go-right {
+    right: 14px;
+  }
+
+  .question__body:hover .question__go-left,
+  .question__body:hover .question__go-right {
+    opacity: 0.7;
+    transition: opacity 0.2s linear;
   }
 
 }
